Bug 387113 - loss of data warnings with BinaryFilter
Summary: loss of data warnings with BinaryFilter
Status: RESOLVED FIXED
Alias: None
Product: LabPlot2
Classification: Applications
Component: backend (show other bugs)
Version: latest
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Stefan Gerlach
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-11-19 17:47 UTC by uwestoehr
Modified: 2017-11-23 22:27 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed In: 2.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description uwestoehr 2017-11-19 17:47:47 UTC
I get:

4>C:\CraftRoot\labplot\src\backend\datasources\filters\BinaryFilter.cpp(230): warning C4267: '=': conversion from 'size_t' to 'int', possible loss of data
4>C:\CraftRoot\labplot\src\backend\datasources\filters\BinaryFilter.cpp(230): warning C4365: '=': conversion from 'std::size_t' to 'int', signed/unsigned mismatch
4>C:\CraftRoot\labplot\src\backend\datasources\filters\BinaryFilter.cpp(296): warning C4267: '=': conversion from 'size_t' to 'int', possible loss of data
4>C:\CraftRoot\labplot\src\backend\datasources\filters\BinaryFilter.cpp(296): warning C4365: '=': conversion from 'std::size_t' to 'int', signed/unsigned mismatch
Comment 1 Stefan Gerlach 2017-11-22 20:32:56 UTC
Git commit 006bed1195592ac33cd0da63c7e0438a11b90441 by Stefan Gerlach.
Committed on 22/11/2017 at 20:32.
Pushed by sgerlach into branch 'master'.

FIXED-IN: 2.5

M  +11   -11   src/backend/datasources/filters/BinaryFilter.cpp
M  +7    -7    src/backend/datasources/filters/BinaryFilter.h
M  +5    -5    src/backend/datasources/filters/BinaryFilterPrivate.h

https://commits.kde.org/labplot/006bed1195592ac33cd0da63c7e0438a11b90441
Comment 2 uwestoehr 2017-11-22 23:16:51 UTC
I still get:

3>C:\CraftRoot\labplot\src\backend\datasources\filters\BinaryFilter.cpp(270): warning C4267: '=': conversion from 'size_t' to 'int', possible loss of data
3>C:\CraftRoot\labplot\src\backend\datasources\filters\BinaryFilter.cpp(270): warning C4365: '=': conversion from 'std::size_t' to 'int', signed/unsigned mismatch
3>C:\CraftRoot\labplot\src\backend\datasources\filters\BinaryFilter.cpp(272): warning C4267: '=': conversion from 'size_t' to 'int', possible loss of data
3>C:\CraftRoot\labplot\src\backend\datasources\filters\BinaryFilter.cpp(272): warning C4365: '=': conversion from 'std::size_t' to 'int', signed/unsigned mismatch
3>C:\CraftRoot\labplot\src\backend\datasources\filters\BinaryFilter.cpp(275): warning C4267: '=': conversion from 'size_t' to 'int', possible loss of data
3>C:\CraftRoot\labplot\src\backend\datasources\filters\BinaryFilter.cpp(275): warning C4365: '=': conversion from 'std::size_t' to 'int', signed/unsigned mismatch
3>C:\CraftRoot\labplot\src\backend\datasources\filters\BinaryFilter.cpp(568): warning C4365: '=': conversion from 'int' to 'std::size_t', signed/unsigned mismatch
3>C:\CraftRoot\labplot\src\backend\datasources\filters\BinaryFilter.cpp(604): warning C4365: '=': conversion from 'int' to 'std::size_t', signed/unsigned mismatch
3>C:\CraftRoot\labplot\src\backend\datasources\filters\BinaryFilter.cpp(610): warning C4365: '=': conversion from 'int' to 'std::size_t', signed/unsigned mismatch
Comment 3 Stefan Gerlach 2017-11-23 22:27:12 UTC
Git commit cda009002904ae8268254d89e7e53ee03722092c by Stefan Gerlach.
Committed on 23/11/2017 at 22:26.
Pushed by sgerlach into branch 'master'.

FIXED-IN: 2.5

M  +6    -6    src/backend/datasources/filters/BinaryFilter.cpp

https://commits.kde.org/labplot/cda009002904ae8268254d89e7e53ee03722092c