BUG: 387113

FIXED-IN: 2.5